--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: comet_indicator
-description: A new Flutter project.
+description: An indicator ui package
 version: 0.0.1
-homepage:
+homepage: https://github.com/ry-itto/comet_indicator
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
